--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,18 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Post</title>
-</head>
-<body>
-    <h1>Create a New Post</h1>
-    <form action="/posts/create" method="post">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br>
-        <label for="content">Content:</label><br>
-        <textarea id="content" name="content" rows="4" cols="50" required></textarea><br>
-        <button type="submit">Submit</button>
+<div class="container">
+  <div class="grid">
+    <h3>Blog Post</h3>
+    <form id="new-post">
+
+      <fieldset>
+        <input
+          id="title"
+          type="text"
+          name="text"
+          placeholder="Title"
+          aria-label="Text"
+        />
+        <input
+          id="content"
+          type="text"
+          name="text"
+          placeholder="Content"
+          aria-label="Text"
+        />
+      </fieldset>
+      <button type="submit">Submit</button>
     </form>
-</body>
-</html>
+  </div>
+</div>
+
+<script src="/js/newPost.js"></script>
